--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 
-baseurl = "/"
+baseurl = "https://atla.github.io/aoc-blog-hugo"
 languageCode = "en-us"
 # Add it only if you keep the theme in the `themes` directory.
 # Remove it if you use the theme as a remote Hugo Module.
