--- a/config.toml
+++ b/config.toml
@@ -4,6 +4,7 @@ languageCode = "en-us"
 # Add it only if you keep the theme in the `themes` directory.
 # Remove it if you use the theme as a remote Hugo Module.
 paginate = 5
+theme ="terminal"
 
 [params]
   # dir name of your main content (default is `content/posts`).
