--- a/config.toml
+++ b/config.toml
@@ -4,7 +4,10 @@ languageCode = "en-us"
 # Add it only if you keep the theme in the `themes` directory.
 # Remove it if you use the theme as a remote Hugo Module.
 paginate = 5
-theme ="terminal"
+
+[module]
+  [[module.imports]]
+    path = 'github.com/panr/hugo-theme-terminal'
 
 [params]
   # dir name of your main content (default is `content/posts`).
